--- a/web/index.html
+++ b/web/index.html
@@ -97,5 +97,29 @@
       loadMainDartJs();
     }
   </script>
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAj4GhdAQFlNLhNLv5DpvR6vCDUiaxFBWM",
+    authDomain: "bakery203.firebaseapp.com",
+    projectId: "bakery203",
+    storageBucket: "bakery203.appspot.com",
+    messagingSenderId: "139664672802",
+    appId: "1:139664672802:web:1f61439e6d98a839d1a27b",
+    measurementId: "G-K76ESNYZXS"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
